# IoTEmbedded

./: .gitignore  AGENTS.md  IoTEmBASIC.sln  README.md  ROADMAP.md
.github/workflows/: pages.yml
docs/: ARCHITECTURE.md
docs/basic/: api-contracts.md  app01.bas  app02.bas  basic-api.v1.json
examples/basic/: README.md  mqtt_pubsub.bas
examples/basic/smoke/: config_smoke.bas  display_smoke.bas  json_smoke.bas  modbus_smoke.bas  mqtt_smoke.bas  serial_smoke.bas  smoke-manifest.v1.json
pages/: index.html  styles.css
projects/: README.md
projects/_template/: README.md
projects/_template/app/: README.md
projects/_template/board/: README.md
projects/_template/linker/: README.md
projects/_template/visualgdb/: README.md
projects/stm32/: README.md
projects/stm32/f1/: README.md
projects/stm32/f1/stm32f103vetx/: .cproject  .mxproject  CMakeLists.txt  STM32F103VETX.ioc  STM32F103VETX.vgdbcmake
projects/stm32/f1/stm32f103vetx/App/Bsp/Inc/: bsp_air724.h  bsp_board.h  bsp_ch395.h  bsp_eeprom.h  bsp_rs485.h  bsp_watchdog.h
projects/stm32/f1/stm32f103vetx/App/Bsp/Src/: bsp_board.c  bsp_ch395.c  bsp_eeprom.c  bsp_uart_callbacks.c  bsp_watchdog.c
projects/stm32/f1/stm32f103vetx/App/Common/Inc/: app_types.h
projects/stm32/f1/stm32f103vetx/App/Common/Src/: log.c  md5.c  util.c
projects/stm32/f1/stm32f103vetx/App/Config/Inc/: network_config.h
projects/stm32/f1/stm32f103vetx/Core/Inc/: FreeRTOSConfig.h
projects/stm32/f1/stm32f103vetx/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
projects/stm32/f4/: README.md
projects/stm32/g4/: README.md
projects/stm32/l4/stm32l475vetx/: CMakeLists.txt  STM32L475VETX.vgdbcmake  STM32L475VETX_FLASH.ld
src/App/: README.md
src/App/Bsp/Src/: bsp_rs485.c
src/App/Common/Inc/: log.h  util.h
src/App/Config/Src/: config.c
src/App/Core/Inc/: modbus_test.h
src/App/Core/Src/: app_rtos.c  modbus_test.c
src/App/Devices/Inc/: ac_controller.h  ups_detector_interface.h
src/App/Devices/Src/: ac_controller.c  device_catalog.c  electricity_meter.c  telemetry_reporter.c  temperature_humidity_sensor.c
src/App/Network/Ch395/Inc/: ch395_board.h
src/App/Network/Ch395/Src/: ch395_board.c  ch395_probe.c
src/App/Network/Inc/: network_socket.h  network_time.h
src/App/Network/Src/: network_socket_ch395.c  network_time.c
src/App/Protocol/Modbus/Inc/: modbus_api.h  modbus_core_crc.h
src/App/Protocol/Modbus/Src/: modbus_core_master.c
src/Application/Inc/: app.h  app_rtos.h
src/Application/Src/: app.c  app_freertos_hooks.c  app_rtos.c  modbus_test.c
src/Board/Inc/: board_resources.h  bsp_board.h  bsp_hal.h  bsp_watchdog.h
src/Board/Pandora/Inc/: pandora_board_resources.h  pandora_display.h
src/Board/Pandora/Src/: pandora_board_resources.c  pandora_display.c
src/Board/PowerEnvDaq/Inc/: power_env_daq_board_resources.h
src/Board/PowerEnvDaq/Src/: power_env_daq_board_resources.c
src/Board/Src/: board_resources.c  bsp_board.c  bsp_watchdog.c
src/Bsp/: README.md
src/Bsp/Inc/: bsp_uart.h
src/Bsp/Src/: bsp_air724.c  bsp_uart.c
src/Bus/Rs485/Inc/: bsp_rs485.h
src/Bus/Rs485/Src/: bsp_rs485.c
src/Bus/Uart/Inc/: bsp_uart.h
src/Bus/Uart/Src/: bsp_uart.c  bsp_uart_callbacks.c
src/Common/: README.md
src/Common/Inc/: app_types.h  log.h
src/Common/Src/: log.c  md5.c  util.c
src/Config/: README.md
src/Config/Inc/: config.h  network_config.h
src/Config/Src/: config.c
src/Core/: README.md
src/Core/Basic/: README.md
src/Core/Common/: README.md
src/Core/Public/: README.md
src/Core/Runtime/: README.md
src/Devices/Inc/: ac_controller.h  discrete_sensor.h  electricity_meter.h  telemetry_reporter.h  temperature_humidity_sensor.h  ups_detector_interface.h
src/Devices/Src/: ac_controller.c  device_catalog.c  device_manager.c  discrete_sensor.c  electricity_meter.c  smart_switch.c  telemetry_reporter.c  temperature_humidity_sensor.c  ups_detector_interface.c
src/Display/Inc/: display_api.h  display_driver.h  display_st7789.h
src/Display/Src/: display_api.c  display_st7789.c
src/Drives/: README.md
src/Drives/Board/: README.md
src/Drives/Device/: README.md
src/Interpreter/Inc/: app_basic.h  app_basic_registry.h  basic.h  basic_config.h  basic_config_api.h  basic_display.h  basic_format.h  basic_json.h  basic_modbus.h  basic_mqtt.h  basic_qb45_graphics.h  basic_serial.h  basic_uart.h
src/Interpreter/Src/: app_basic.c  app_basic_registry.c  basic.c  basic_config_api.c  basic_display.c  basic_format.c  basic_json.c  basic_modbus.c  basic_mqtt.c  basic_qb45_graphics.c  basic_serial.c  basic_uart.c
src/Modem/Inc/: bsp_air724.h
src/Modem/Src/: bsp_air724.c
src/Network/Ap6181/Inc/: ap6181_socket.h  bsp_ap6181.h
src/Network/Ap6181/Src/: ap6181_socket.c  bsp_ap6181.c
src/Network/Ch395/Inc/: bsp_ch395.h  ch395_driver.h
src/Network/Ch395/Src/: bsp_ch395.c  ch395_board.c  ch395_driver.c  ch395_probe.c  ch395_socket.c
src/Network/Inc/: network_manager.h  network_socket.h  network_time.h
src/Network/Src/: network_manager.c  network_socket.c  network_socket_air724.c  network_socket_ap6181.c  network_socket_ch395.c  network_time.c
src/Platform/: README.md
src/Platform/Bus/: README.md
src/Platform/Chip/: README.md
src/Platform/Port/: README.md
src/Platform/stm32/: README.md
src/Platform/stm32/f1/: README.md
src/Platform/stm32/f1/stm32f103vetx/: .project  README.md  STM32F103VETX.ioc
src/Platform/stm32/l4/stm32l475vetx/: .cproject  .mxproject  .project  README.md  STM32L475VETX.gpdsc  STM32L475VETX.ioc  STM32L475VETX_FLASH.ld
src/Protocol/Modbus/Inc/: modbus_core.h  modbus_core_crc.h  modbus_core_master.h
src/Protocol/Modbus/Src/: modbus_api.c  modbus_core.c  modbus_core_crc.c  modbus_core_master.c
src/Protocol/Mqtt/Inc/: mqtt_client.h
src/Protocol/Mqtt/Src/: mqtt_client.c
src/Protocol/Platform/Src/: platform_messages.c
src/Storage/: README.md
src/Storage/Inc/: app_eeprom.h  bsp_eeprom.h
src/Storage/Src/: app_eeprom.c  bsp_eeprom.c
tools/LocalMqttBroker/: LocalMqttBroker.csproj  Program.cs
tools/VisualGDBBuild/: Program.cs
(+44 files in other folders)
